# hybrid-ai-architecture

./: .env  .env.example  README.md  docker-compose.dev.yml  docker-compose.yml
ai_service/: Dockerfile  README.md  pyproject.toml  run.sh
ai_service/src/app/: main.py  websocket_placeholder.py
ai_service/src/app/api/: endpoints.py
ai_service/src/app/inference/: predictor.py
ai_service/src/app/schemas/: input_schema.py
docs/LatexSourceFiles/: typeinst.tex
edge_agent/: Dockerfile  README.md  pyproject.toml
edge_agent/src/app/: main.py
edge_agent/src/app/api/: endpoints.py
edge_agent/src/app/inference/: predictor.py
edge_agent/src/app/schemas/: input_schema.py
orchestration_service/: Dockerfile  package-lock.json  package.json
orchestration_service/src/: app.module.ts
orchestration_service/src/ai-client/: ai.service.ts
orchestration_service/src/controllers/: tasks.controller.ts
orchestration_service/src/services/: orchestrator.service.ts
